raw/PRADIPTA HARIMURTI NEVAL 6417 245150207111065/2024-11-14-11-12-37.ceg/compilation.txt
NT.java:20: error: cannot find symbol
        angAwal = input[0];
        ^
  symbol:   variable angAwal
  location: class NT
NT.java:20: error: cannot find symbol
        angAwal = input[0];
                  ^
  symbol:   variable input
  location: class NT
2 errors
Not compiled
